fixed alignment issue on portoflio page by using bootstrap card layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,11 @@ a:link.navbar-brand {
 .col-bg-card {
     margin: 10px 0;
 }
+.card {
+    color: #E86F0B;
+    font-size: 16px;
+    font-weight: bold;
+}
 .imgpad {
     margin: 10px;
 }
@@ -90,14 +95,11 @@ hr {
 	display: block;
 	clear: both;
 }
-p.port_text {
+h3 {
     color: #fff;
     background-color: #E86F0B;
     height: 30px;
-    width: 100%;
     text-align: center;
-    margin-top: 100px;
-    padding-top: 8px;
 }
 .row-port {
     margin: 10px 40px;
